[package]
name = "advent-of-code-2023"
version = "0.11.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
nom = "7.1.3"
regex = "1.10"
petgraph="0.6"
clap = { version = "4", features = ["derive"] }
itertools = "0.12.0"
strum = "0.25.0"
derive_more = "0.99.17"

[workspace]
members = ["day-*", "template", "mapgrid"]


[[bin]]
name = "today"
path = "day-11/src/main.rs"


[profile.dev.package."*"]
debug = false
opt-level = 3
