[package]
name = "day-08"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
itertools = "0.12.0"
num = "0.4.1"
num-integer = "0.1.45"
regex = "1.10.2"
strum = { version = "0.25.0", features = ["derive"] }
