[package]
name = "day-12"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
michie = "3.0.2"
nom = "7.1.3"
num = { version = "0.4.1", features = ["num-bigint"] }
regex = "1.10.2"
strum = { version = "0.25.0", features = ["derive"] }
winnow = "0.5.28"
